--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@rc-component/mentions": "^1.2.0",
+    "primereact": "^10.9.4",
     "rc-mentions": "^2.19.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
